[ppc] [s390]: Build fails due to -Werror=switch (introduced with JDK-8211029)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 12
    • Affects Version/s: 12
    • Component/s: hotspot
    • b14
    • ppc, s390x
    • generic

      There are some switch statements in platform files which do not contain a default case. With the newly introduced -Werror option, these files do no longer compile.

            Assignee:
            Lutz Schmidt
            Reporter:
            Lutz Schmidt
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: