8211145: [ppc] [s390]: Build fails due to -Werror=switch (introduced with JDK-8211029)

Reviewed-by: shade, simonis